config is a bitch

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "config": {
     "preferred-install": "dist"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
       "poshaq\\": "app/"
